--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "@ionic/angular": "^7.0.0",
     "ionicons": "^7.0.0",
     "moment": "^2.30.1",
+    "ng2-currency-mask": "^13.0.3",
     "rxjs": "~7.8.0",
     "ts-md5": "^1.3.1",
     "tslib": "^2.3.0",
